// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizes "[fa]" as a FontAwesome icon 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "classes": Array [
          "fa",
        ],
        "type": "fontAwesomeIcon",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`tokenizes "[fab.fa-discord]" correctly 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "classes": Array [
          "fab",
          "fa-discord",
        ],
        "type": "fontAwesomeIcon",
      },
    ],
    "type": "paragraph",
  },
]
`;
